增加 getPaymentURL 方法

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@lipingruan/node-paypal-sdk",
-  "version": "0.0.1",
+  "private": false,
+  "version": "0.0.2",
   "description": "nodejs paypal sdk",
   "main": "paypal.js",
   "directories": {
